tests/cases/compiler-development/artifact/errors/diagnostic-union-by-missing-selector.ari
struct Payload {
  tag: i64,
}

struct Packet {
  payload: Payload,
  fragment: union by header.kind {
    text => i64,
  },
}

fn main() -> i64 {
  return 0;
}
